--- a/Take-home-Exercise_2.qmd
+++ b/Take-home-Exercise_2.qmd
@@ -12,7 +12,8 @@ execute:
 
 ## Data preparation
 
-load libraries 
+load libraries
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -20,6 +21,7 @@ pacman::p_load(jsonlite, tidygraph, ggraph, visNetwork, lubridate, tidyverse, fo
 ```
 
 Read json data file
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -28,6 +30,7 @@ mc2_data <- fromJSON("data/MC2/mc2_challenge_graph.json")
 ```
 
 Nodes data from the original dataset
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -36,8 +39,8 @@ mc2_nodes <- as_tibble(mc2_data$nodes) %>%
 
 ```
 
-Extract the edges/links data from the original dataset. 
-Change the date format of the 'ArrivalDate' column and obtain the year and month data from it.'parent_hscode' column is first 3 digit of hscode. Use the select() function to rearrange the column positions, and apply distinct() to remove any duplicate rows.
+Extract the edges/links data from the original dataset. Change the date format of the 'ArrivalDate' column and obtain the year and month data from it.'parent_hscode' column is first 3 digit of hscode. Use the select() function to rearrange the column positions, and apply distinct() to remove any duplicate rows.
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -52,8 +55,8 @@ mc2_edges <- as_tibble(mc2_data$links) %>%
  
 ```
 
-Inner join with HS_code_3_India.csv for 'HS_Name'
-file and convert the data type of the 'parent_hscode' column in the Parent HS code table to character. Perform an inner join with the HS code table based on the 'parent_hscode' column, filtering away any unrelated hscode.(https://connect2india.com/hs-codes-directory/hs-code-3)
+Inner join with HS_code_3\_India.csv for 'HS_Name' file and convert the data type of the 'parent_hscode' column in the Parent HS code table to character. Perform an inner join with the HS code table based on the 'parent_hscode' column, filtering away any unrelated hscode.(https://connect2india.com/hs-codes-directory/hs-code-3)
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -63,12 +66,7 @@ mc2_edges_parent_hscode <- inner_join (mc2_edges,HS_code_3_India,
                                     join_by(parent_hscode   == parent_hscode))
 ```
 
-Aggregate edges data
-Group the data by source, target, Year, parent_hscode, and HS_Name
-Calculate the count of weights and the sum of Totalkg within each group
-Filter out rows where source is equal to target
-Filter out rows where weights is greater than 20
-Remove the grouping
+Aggregate edges data Group the data by source, target, Year, parent_hscode, and HS_Name Calculate the count of weights and the sum of Totalkg within each group Filter out rows where source is equal to target Filter out rows where weights is greater than 20 Remove the grouping
 
 ```{r}
 #| output: false
@@ -83,6 +81,7 @@ mc2_edges_aggregated_all <- mc2_edges_parent_hscode %>%
 ```
 
 Aggregate edges data for latest year 2034
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -92,6 +91,7 @@ mc2_edges_aggregated <- mc2_edges_aggregated_all %>% filter(Year == "2034")
 ```
 
 Extract nodes from source and target to make sure every nodes is present.
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -106,9 +106,8 @@ mc2_nodes_extracted <- rbind(id1, id2) %>%
   distinct()
 ```
 
-
-
 Define node_id to each nodes and added shpcountry,rcvcountry info from original nodes data while replacing empty value. Save it as 'mc2_nodes_id'
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -120,6 +119,7 @@ mc2_nodes_id <- left_join(mc2_nodes_extracted, mc2_nodes, by = c("id" = "id")) %
 ```
 
 Replaced source and target text value with node_id in the 'mc2_edges_aggregated' data. And rearrange column position.
+
 ```{r}
 #| output: false
 #| code-fold: false
@@ -135,6 +135,7 @@ mc2_edges_aggregated_id <- mc2_edges_aggregated %>%
 ```
 
 ## Exploratory data analysis
+
 ::: panel-tabset
 ## Yearly total Weight
 
@@ -151,7 +152,7 @@ plot_ly(
 
 ```
 
-## Top Exporters by weight 
+## Top Exporters by weight
 
 ```{r}
 #The provided code identifies the top 10 exporters by weight and creates a stacked bar plot to visualize their distribution.
@@ -176,7 +177,8 @@ plot_ly(
 ```
 :::
 
-## Network map by Area of fish source (rcvcountry) 
+## Network map by Area of fish source (rcvcountry)
+
 ```{r}
 #| code-fold: false
 mc2_graph <- tbl_graph(nodes = mc2_nodes_id,
@@ -203,7 +205,6 @@ visNetwork(nodes_df,edges_df, width = "100%",main = "Network map by Area of fish
   visLegend() %>%
   visOptions(selectedBy = "rcvcountry")
 ```
-
 
 ## Calculate degree centrality
 
@@ -232,9 +233,10 @@ nodes_df$eigenvector_centrality <- eigenvector_centrality
 nodes_df$eigenvector_centrality <- round(nodes_df$eigenvector_centrality, digits = 3)
 ```
 
-## Network map by degree_centrality. 
-Assign 'group' column for color coding 
-Assign 'title' column for tooltip
+## Network map by degree_centrality.
+
+Assign 'group' column for color coding Assign 'title' column for tooltip
+
 ```{r}
 #| code-fold: false
 # Set threshold values for centrality measures
@@ -257,9 +259,11 @@ visNetwork(filtered_nodes, edges_df, width = "100%",main = "Network map by degre
   visGroups(groupname = "62" ,shape = "icon", icon = list(code = "f005", size = 100)) %>% 
   addFontAwesome()
 ```
-## Network map by betweenness_centrality. 
-Assign 'group' column for color coding 
-Assign 'title' column for tooltip
+
+## Network map by betweenness_centrality.
+
+Assign 'group' column for color coding Assign 'title' column for tooltip
+
 ```{r}
 #| code-fold: false
 # Set threshold values for centrality measures
@@ -280,10 +284,10 @@ visNetwork(filtered_nodes, edges_df, width = "100%",main = "Network map by betwe
   visOptions(selectedBy = "betweenness_centrality") 
 ```
 
-## Network map by closeness_centrality 
-Assign 'group' column for color coding 
-Assign 'title' column for tooltip
-Added remove NA line of code for isolated nodes.
+## Network map by closeness_centrality
+
+Assign 'group' column for color coding Assign 'title' column for tooltip Added remove NA line of code for isolated nodes.
+
 ```{r}
 #| code-fold: false
 # Set threshold values for centrality measures
@@ -308,10 +312,10 @@ visNetwork(filtered_nodes, edges_df, width = "100%",main = "Network map by close
   visOptions(selectedBy = "closeness_centrality") 
 ```
 
-## Network map by eigenvector_centrality 
-Assign 'group' column for color coding 
-Assign 'title' column for tooltip
-Added remove NA line of code for isolated nodes.
+## Network map by eigenvector_centrality
+
+Assign 'group' column for color coding Assign 'title' column for tooltip Added remove NA line of code for isolated nodes.
+
 ```{r}
 #| code-fold: false
 # Set threshold values for centrality measures
